// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoringPairsSection Snapshots matches snapshot for disabled state 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#f3f4f6",
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 26,
                },
                {
                  "color": "#1A1A1A",
                },
              ]
            }
          >
            Scoring Pairs
          </Text>
        </View>
        <View
          style={
            [
              {
                "borderRadius": 12,
                "borderWidth": 1,
                "elevation": 2,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.05,
                "shadowRadius": 2,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#E0E0E0",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 12,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    },
                    {
                      "backgroundColor": "#EEEEEE",
                    },
                  ]
                }
              >
                <View
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  testID="icon-account-switch"
                />
              </View>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      {
                        "color": "#1A1A1A",
                      },
                    ]
                  }
                >
                  Disabled
                </Text>
                <Text
                  style={
                    [
                      {
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                        "marginTop": 2,
                      },
                      {
                        "color": "#6B6B6B",
                      },
                    ]
                  }
                >
                  Players can score themselves
                </Text>
              </View>
            </View>
            <View
              testID="pill-optional"
            >
              <Text>
                Optional
              </Text>
              <Text
                testID="pill-variant"
              >
                default
              </Text>
              <Text
                testID="pill-size"
              >
                sm
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ScoringPairsSection Snapshots matches snapshot for empty state 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#f3f4f6",
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 26,
                },
                {
                  "color": "#1A1A1A",
                },
              ]
            }
          >
            Scoring Pairs
          </Text>
        </View>
        <View
          style={
            [
              {
                "borderRadius": 12,
                "borderWidth": 1,
                "elevation": 2,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.05,
                "shadowRadius": 2,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#E0E0E0",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 12,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    },
                    {
                      "backgroundColor": "#E8F5E9",
                    },
                  ]
                }
              >
                <View
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  testID="icon-account-switch"
                />
              </View>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      {
                        "color": "#1A1A1A",
                      },
                    ]
                  }
                >
                  Enabled
                </Text>
                <Text
                  style={
                    [
                      {
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                        "marginTop": 2,
                      },
                      {
                        "color": "#6B6B6B",
                      },
                    ]
                  }
                >
                  Designated markers score each player
                </Text>
              </View>
            </View>
            <View
              testID="pill-required"
            >
              <Text>
                Required
              </Text>
              <Text
                testID="pill-variant"
              >
                primary
              </Text>
              <Text
                testID="pill-size"
              >
                sm
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "height": 1,
                  "marginHorizontal": 12,
                },
                {
                  "backgroundColor": "#E0E0E0",
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              testID="icon-account-question"
            />
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 20,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              No scoring pairs assigned yet
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ScoringPairsSection Snapshots matches snapshot for enabled with circular pairs 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#f3f4f6",
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 26,
                },
                {
                  "color": "#1A1A1A",
                },
              ]
            }
          >
            Scoring Pairs
          </Text>
        </View>
        <View
          style={
            [
              {
                "borderRadius": 12,
                "borderWidth": 1,
                "elevation": 2,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.05,
                "shadowRadius": 2,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#E0E0E0",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 12,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    },
                    {
                      "backgroundColor": "#E8F5E9",
                    },
                  ]
                }
              >
                <View
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  testID="icon-account-switch"
                />
              </View>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      {
                        "color": "#1A1A1A",
                      },
                    ]
                  }
                >
                  Enabled
                </Text>
                <Text
                  style={
                    [
                      {
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                        "marginTop": 2,
                      },
                      {
                        "color": "#6B6B6B",
                      },
                    ]
                  }
                >
                  Designated markers score each player
                </Text>
              </View>
            </View>
            <View
              testID="pill-required"
            >
              <Text>
                Required
              </Text>
              <Text
                testID="pill-variant"
              >
                primary
              </Text>
              <Text
                testID="pill-size"
              >
                sm
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "height": 1,
                  "marginHorizontal": 12,
                },
                {
                  "backgroundColor": "#E0E0E0",
                },
              ]
            }
          />
          <View
            style={
              {
                "gap": 8,
                "padding": 12,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginBottom": 8,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                      "lineHeight": 16,
                      "textTransform": "uppercase",
                    },
                    {
                      "color": "#6B6B6B",
                    },
                  ]
                }
              >
                Circular Chain
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#9E9E9E",
                    },
                  ]
                }
              >
                3
                 
                pairs
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginBottom": 4,
                    "padding": 8,
                  },
                  {
                    "backgroundColor": "#FAFAFA",
                  },
                  false,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PA
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Alpha
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "paddingHorizontal": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 18,
                      "width": 18,
                    }
                  }
                  testID="icon-arrow-right"
                />
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PB
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Beta
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginBottom": 4,
                    "padding": 8,
                  },
                  {
                    "backgroundColor": "#FAFAFA",
                  },
                  false,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PB
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Beta
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "paddingHorizontal": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 18,
                      "width": 18,
                    }
                  }
                  testID="icon-arrow-right"
                />
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PC
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Charlie
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginBottom": 4,
                    "padding": 8,
                  },
                  {
                    "backgroundColor": "#FAFAFA",
                  },
                  {
                    "marginBottom": 0,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PC
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Charlie
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "paddingHorizontal": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 18,
                      "width": 18,
                    }
                  }
                  testID="icon-arrow-right"
                />
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PA
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Alpha
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ScoringPairsSection Snapshots matches snapshot for enabled with reciprocal pairs 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#f3f4f6",
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 26,
                },
                {
                  "color": "#1A1A1A",
                },
              ]
            }
          >
            Scoring Pairs
          </Text>
          <View
            style={
              {
                "height": 18,
                "width": 18,
              }
            }
            testID="icon-pencil"
          />
        </View>
        <View
          accessibilityLabel="Edit scoring pairs"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderColor": "#E0E0E0",
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 2,
              "opacity": 1,
              "overflow": "hidden",
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.05,
              "shadowRadius": 2,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 12,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    },
                    {
                      "backgroundColor": "#E8F5E9",
                    },
                  ]
                }
              >
                <View
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  testID="icon-account-switch"
                />
              </View>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      {
                        "color": "#1A1A1A",
                      },
                    ]
                  }
                >
                  Enabled
                </Text>
                <Text
                  style={
                    [
                      {
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                        "marginTop": 2,
                      },
                      {
                        "color": "#6B6B6B",
                      },
                    ]
                  }
                >
                  Designated markers score each player
                </Text>
              </View>
            </View>
            <View
              testID="pill-required"
            >
              <Text>
                Required
              </Text>
              <Text
                testID="pill-variant"
              >
                primary
              </Text>
              <Text
                testID="pill-size"
              >
                sm
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "height": 1,
                  "marginHorizontal": 12,
                },
                {
                  "backgroundColor": "#E0E0E0",
                },
              ]
            }
          />
          <View
            style={
              {
                "gap": 8,
                "padding": 12,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "marginBottom": 8,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "600",
                      "lineHeight": 16,
                      "textTransform": "uppercase",
                    },
                    {
                      "color": "#6B6B6B",
                    },
                  ]
                }
              >
                Reciprocal Pairs
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 12,
                      "fontWeight": "400",
                      "lineHeight": 16,
                    },
                    {
                      "color": "#9E9E9E",
                    },
                  ]
                }
              >
                2
                 
                pairs
              </Text>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginBottom": 4,
                    "padding": 8,
                  },
                  {
                    "backgroundColor": "#FAFAFA",
                  },
                  false,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PA
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Alpha
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "paddingHorizontal": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 18,
                      "width": 18,
                    }
                  }
                  testID="icon-swap-horizontal"
                />
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PB
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Beta
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                    "marginBottom": 4,
                    "padding": 8,
                  },
                  {
                    "backgroundColor": "#FAFAFA",
                  },
                  {
                    "marginBottom": 0,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PC
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Charlie
                  </Text>
                </View>
              </View>
              <View
                style={
                  {
                    "paddingHorizontal": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 18,
                      "width": 18,
                    }
                  }
                  testID="icon-swap-horizontal"
                />
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="player-avatar"
                >
                  <Text
                    testID="player-avatar-initials"
                  >
                    PD
                  </Text>
                </View>
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    numberOfLines={1}
                    style={
                      [
                        {
                          "fontSize": 14,
                          "fontWeight": "500",
                          "lineHeight": 20,
                        },
                        {
                          "color": "#1A1A1A",
                        },
                      ]
                    }
                  >
                    Player Delta
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ScoringPairsSection Snapshots matches snapshot for loading state 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#f3f4f6",
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "marginBottom": 12,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 18,
                  "fontWeight": "600",
                  "lineHeight": 26,
                },
                {
                  "color": "#1A1A1A",
                },
              ]
            }
          >
            Scoring Pairs
          </Text>
        </View>
        <View
          style={
            [
              {
                "borderRadius": 12,
                "borderWidth": 1,
                "elevation": 2,
                "overflow": "hidden",
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 1,
                  "width": 0,
                },
                "shadowOpacity": 0.05,
                "shadowRadius": 2,
              },
              {
                "backgroundColor": "#ffffff",
                "borderColor": "#E0E0E0",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "padding": 12,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 12,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "borderRadius": 8,
                      "height": 40,
                      "justifyContent": "center",
                      "width": 40,
                    },
                    {
                      "backgroundColor": "#E8F5E9",
                    },
                  ]
                }
              >
                <View
                  style={
                    {
                      "height": 20,
                      "width": 20,
                    }
                  }
                  testID="icon-account-switch"
                />
              </View>
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      {
                        "color": "#1A1A1A",
                      },
                    ]
                  }
                >
                  Enabled
                </Text>
                <Text
                  style={
                    [
                      {
                        "fontSize": 14,
                        "fontWeight": "400",
                        "lineHeight": 20,
                        "marginTop": 2,
                      },
                      {
                        "color": "#6B6B6B",
                      },
                    ]
                  }
                >
                  Designated markers score each player
                </Text>
              </View>
            </View>
            <View
              testID="pill-required"
            >
              <Text>
                Required
              </Text>
              <Text
                testID="pill-variant"
              >
                primary
              </Text>
              <Text
                testID="pill-size"
              >
                sm
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "height": 1,
                  "marginHorizontal": 12,
                },
                {
                  "backgroundColor": "#E0E0E0",
                },
              ]
            }
          />
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
                "justifyContent": "center",
                "padding": 16,
              }
            }
          >
            <View
              testID="golf-ball-loader"
            >
              <Text
                testID="loader-size"
              >
                sm
              </Text>
            </View>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "fontWeight": "400",
                    "lineHeight": 20,
                  },
                  {
                    "color": "#6B6B6B",
                  },
                ]
              }
            >
              Loading pairs...
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ScoringPairsSection Snapshots matches snapshot for locked state 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#f3f4f6",
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "marginBottom": 12,
          }
        }
      >
        <Text
          style={
            [
              {
                "fontSize": 18,
                "fontWeight": "600",
                "lineHeight": 26,
              },
              {
                "color": "#1A1A1A",
              },
            ]
          }
        >
          Scoring Pairs
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ffffff",
              "borderColor": "#E0E0E0",
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 2,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "padding": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.05,
              "shadowRadius": 2,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "gap": 12,
              }
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 8,
                    "height": 48,
                    "justifyContent": "center",
                    "width": 48,
                  },
                  {
                    "backgroundColor": "#EEEEEE",
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "height": 24,
                    "width": 24,
                  }
                }
                testID="icon-lock"
              />
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 16,
                        "fontWeight": "600",
                        "lineHeight": 24,
                      },
                      {
                        "color": "#6B6B6B",
                      },
                    ]
                  }
                >
                  Scoring Pairs
                </Text>
                <View
                  testID="pill-premium"
                >
                  <Text>
                    Premium
                  </Text>
                  <Text
                    testID="pill-variant"
                  >
                    warning
                  </Text>
                  <Text
                    testID="pill-size"
                  >
                    sm
                  </Text>
                </View>
              </View>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "fontWeight": "400",
                      "lineHeight": 20,
                      "marginTop": 2,
                    },
                    {
                      "color": "#9E9E9E",
                    },
                  ]
                }
              >
                Upgrade to designate who scores each player
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            testID="icon-chevron-right"
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;
